--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,26 +1,21 @@
-/* =================================
-------------------------------------
-  	Template Name: Photographer
-	Description: Photographer HTML Template
-	Author: colorlib
-	Author URI: https://www.colorlib.com/
-	Version: 1.0
-	Created: colorlib
- ------------------------------------
- ====================================*/
-
-
-
-/*----------------------------------------*/
 /* Template default CSS
 /*----------------------------------------*/
 
+* {
+	box-sizing: border-box;
+	&::before, &::after {
+	  box-sizing: border-box;
+	}
+  }
+  
 html,
 body {
 	height: 100%;
 	font-family: "Poppins", sans-serif;
 	-webkit-font-smoothing: antialiased;
-	font-smoothing: antialiased;
+	font-size: 1.125rem;
+	line-height: 1.5;
+	text-rendering: optimizeLegibility;
 }
 
 h1,
@@ -1375,3 +1370,125 @@ ol {
 		height: 400px;
 	}
 }
+
+
+/* Gallery add  */ 
+
+ul li {
+	margin: 0 1.5rem 0 0;
+  }
+  
+  a {
+	color: $gray;
+	text-decoration: none;
+	transition: all 0.2s ease;
+	&:hover {
+	  color: $black;
+	}
+	&.active {
+	  color: $black;
+	}
+  }
+  
+  nav {
+	padding: 2.5rem 0 2.5rem 0;
+	ul {
+	  display: flex;
+	  justify-content: flex-start;
+	}
+	li {
+	  font-size: 1.25rem;
+	  &:nth-child(2) {
+		margin: 0;
+	  }
+	}
+  }
+  
+  #highlight {
+	font-size: 1.25rem;
+  }
+  
+  .gallery {
+	padding: 0 0 4rem 0;
+  }
+  
+  .img-container {
+	width: 100%;
+	height: 500px;
+	cursor: pointer;
+	overflow: hidden;
+  }
+  
+  img {
+	  width: 100%;
+	height: 500px;
+	object-fit: cover;
+	transform: scale(1);
+	transition: all 0.3s ease-in-out;
+	&:hover {
+	  transform: scale(1.05);
+	}
+  }
+  
+ 
+  .title {
+	color: $black;
+	font-size: 1.5rem;
+	font-weight: 700;
+  }
+  
+  .category {
+	font-size: 1rem;
+	color: $gray;
+  }
+  
+  .img-content {
+	display: block;
+	z-index: 5;
+  }
+  
+  .social, .copyright {
+	margin: 1rem;
+  }
+  
+  .social li {
+	display: inline-block;
+  }
+  
+  footer {
+	padding: 1rem 0;
+	background: $footer;
+	text-align: center;
+  }
+  
+  @supports (display: grid) {
+	.gallery .grid {
+	  grid-gap: 1rem;
+	}
+  }
+  
+  @media(min-width: $md) {
+	nav ul {
+	  justify-content: flex-end;
+	}
+  }
+  
+  @media screen and (max-width: 1024px) {
+	img:hover {
+	  transform: none;
+	}
+	
+	.img-container {
+	  height: 100%;
+	  &:hover .img-content-hover {
+		display: none;
+	  }
+	}
+  
+	.img-content {
+	  display: block;
+	  padding: 1rem 0;
+	}
+  }
+
+  
