--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,7 @@ ol {
 	width: 0;
 	height: 6px;
 	left: 0;
-	bottom: 8px;
+	bottom: -3px;
 	background: #8DB952;
 	z-index: -1;
 	-webkit-transition: 0.3s;
@@ -1248,3 +1248,21 @@ background-color: white;
 	background: linear-gradient(90deg, rgb(44, 29, 182) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
 	color: white;
 }
+
+/* [1] The container */
+.img-hover-zoom {
+	height: 430px; /* [1.1] Set it as per your need */
+	overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+  }
+  
+  /* [2] Transition property for smooth transformation of images */
+  .img-hover-zoom img {
+	transition: transform .5s ease;
+  }
+  
+  /* [3] Finally, transforming the image when container gets hovered */
+  .img-hover-zoom:hover img {
+	transform: scale(1.3);
+  }
+
+
