--- a/css/style.css
+++ b/css/style.css
@@ -566,23 +566,6 @@ ol {
    Hero section
  -----------------------*/
 
- .fondo {
-	 background-image: url("/img/jumbo1.jpg");
-	 height: 80vh;
-	 background-position: center;
-	 background-size: cover;
- }
-
-.hero__section {
-	padding-top: 120px;
-	margin-bottom: 90px;
-}
-
-@media (max-width: 576px) {
-	.hero__section {
-		padding-top: 30px;
-	}
-}
 
 .slide-item {
 	padding: 0 5px;
@@ -674,11 +657,11 @@ ol {
 	position: absolute;
 	content: "";
 	width: 100%;
-	height: 6px;
+	height: 7px;
 	left: 0;
-	bottom: 8px;
+	bottom: -6px;
 	background: #8DB952;
-	opacity: 0.5;
+	opacity: 08;
 	z-index: -1;
 }
 
@@ -1208,6 +1191,9 @@ background-color: white;
 
 }
 
+
+/* GALLERY */
+
 .hover_white
 .hover_red,
 .hover_yellow,
@@ -1282,9 +1268,10 @@ background-color: white;
 	transition: transform .5s ease;
   }
   
-  /* [3] Finally, transforming the image when container gets hovered */
+  /* [3] Transforming the image when container gets hovered */
   .img-hover-zoom:hover img {
 	transform: scale(1.3);
   }
 
+/* GALLERY END */
 
