--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h6 {
 }
 
 h1 {
-	font-size: 70px;
+	font-size: 50px;
 }
 
 h2 {
@@ -567,7 +567,7 @@ ol {
  -----------------------*/
 
 
-.slide-item {
+/* .slide-item {
 	padding: 0 5px;
 	outline: none;
 	cursor: pointer;
@@ -605,7 +605,7 @@ ol {
 	padding-top: 50px;
 	max-width: 800px;
 	margin: 0 auto;
-}
+} */
 
 /*---------------------
    Footer section
@@ -1319,3 +1319,7 @@ background-color: white;
 	opacity: 0.5;
 	z-index: 1;
   }
+
+  /* SLIDER NEW */
+
+  
