--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h6 {
 }
 
 h1 {
-	font-size: 50px;
+	font-size: 40px;
 }
 
 h2 {
@@ -507,7 +507,7 @@ ol {
 }
 
 .main__menu .nav__menu>li .sub__menu>li>a:hover {
-	color: #222222;
+	color: #960c4c;
 }
 
 .main__menu .nav__menu>li .sub__menu>li>a:after {
